<resources>
    <string name="app_name">StillSpace</string>
    <string name="app_name_first">Still</string>
    <string name="app_name_last">Space</string>

    <!-- Onboarding Activity -->
    <string name="content_description_circle_marker">Circle Marker</string>
    <string name="content_description_book">Book</string>
    <string name="onboarding_1_description">StillSpace helps find quiet\nstudy spaces near you.</string>

    <string name="onboarding_2_text_1">View study areas that are:</string>
    <string name="onboarding_2_text_2">Then see if it is available <b>now</b> or\nin <b>1–2 hours.</b></string>
    <string name="onboarding_2_empty_color">Green</string>
    <string name="onboarding_2_sparse_color">Yellow</string>
    <string name="onboarding_2_crowded_color">Red</string>
    <string name="empty">Empty</string>
    <string name="sparse">Sparse</string>
    <string name="crowded">Crowded</string>

    <string name="content_description_current_page">Current page icon</string>
    <string name="content_description_skip">Skip</string>
    <string name="content_description_finish">Finish</string>

    <!-- Maps Activity -->
    <string name="title_activity_maps">StillSpace</string>
    <string name="stillspace_logo_content_description">StillSpace Logo</string>
    <string name="create_output_button">Create Output</string>
    <string name="maps_now">Now</string>
    <string name="maps_1hr">+1 hour</string>
    <string name="maps_2hr">+2 hours</string>

</resources>
