<?xml version="1.0" encoding="utf-8"?>

<!-- Used for forcing the content to the bottom -->
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Not set as the background to avoid stretching the image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/content_description_current_page"
        android:src="@drawable/onboarding_2_background"
        android:adjustViewBounds="true" />

    <!-- Just to create the white box -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOffWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <!-- Actual content container; also adds all-around margin -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="100dp"
            android:layout_marginHorizontal="20dp"
            tools:ignore="UnusedAttribute,UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OnboardingText"
                android:text="@string/onboarding_2_text_1" />

            <!-- Container for example colors -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:gravity="center" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/onboarding_2_empty_color"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_onboarding_2_area_empty" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    style="@style/OnboardingIconExamples"
                    android:text="@string/empty" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/onboarding_2_sparse_color"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_onboarding_2_area_sparse" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    style="@style/OnboardingIconExamples"
                    android:text="@string/sparse" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/onboarding_2_crowded_color"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_onboarding_2_area_crowded" />
                <!-- No marginEnd unlike the others -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OnboardingIconExamples"
                    android:text="@string/crowded" />

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                style="@style/OnboardingText"
                android:text="@string/onboarding_2_text_2" />

        </LinearLayout>  <!-- Actual content container -->

    </LinearLayout>  <!-- White box -->

</androidx.constraintlayout.widget.ConstraintLayout>

